// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`community_flashhelp/loginForm display error message when username password is invalid 1`] = `
<community_flashhelp-loginform>
  #shadow-root(open)
    <div
      class="slds-form"
    >
      <fieldset
        class="slds-form-element slds-form_compound"
      >
        <legend
          class="slds-form-element__legend slds-form-element__label"
        >
          Login to the community
        </legend>
        <div
          class="slds-form-element__control"
        >
          <lightning-input
            data-user="true"
          >
            #shadow-root(open)
              <input
                aria-label="Username"
                data-readonly="false"
                data-required="true"
                data-type="text"
                data-value="user"
              />
          </lightning-input>
          <lightning-input
            data-password="true"
          >
            #shadow-root(open)
              <input
                aria-label="Password"
                data-readonly="false"
                data-required="true"
                data-type="password"
                data-value="password"
              />
          </lightning-input>
        </div>
      </fieldset>
      <div
        class="slds-form-element slds-m-top_medium"
      >
        <div
          class="slds-form-element__control"
        >
          <lightning-button
            data-submitbtn="true"
          >
            #shadow-root(open)
              <button>
                Submit
              </button>
          </lightning-button>
        </div>
      </div>
      <div
        class="slds-form-element"
      >
        <div
          class="slds-form-element__control"
        >
          <lightning-formatted-rich-text
            class="slds-text-color_error"
          >
            #shadow-root(open)
              <input
                data-readonly="false"
                data-value="error message"
              />
          </lightning-formatted-rich-text>
        </div>
      </div>
    </div>
</community_flashhelp-loginform>
`;

exports[`community_flashhelp/loginForm renders correctly when getIsUserNamePasswordEnabled is false 1`] = `
<community_flashhelp-loginform>
  #shadow-root(open)
</community_flashhelp-loginform>
`;

exports[`community_flashhelp/loginForm renders correctly when getIsUserNamePasswordEnabled is true 1`] = `
<community_flashhelp-loginform>
  #shadow-root(open)
    <div
      class="slds-form"
    >
      <fieldset
        class="slds-form-element slds-form_compound"
      >
        <legend
          class="slds-form-element__legend slds-form-element__label"
        >
          Login to the community
        </legend>
        <div
          class="slds-form-element__control"
        >
          <lightning-input
            data-user="true"
          >
            #shadow-root(open)
              <input
                aria-label="Username"
                data-readonly="false"
                data-required="true"
                data-type="text"
              />
          </lightning-input>
          <lightning-input
            data-password="true"
          >
            #shadow-root(open)
              <input
                aria-label="Password"
                data-readonly="false"
                data-required="true"
                data-type="password"
              />
          </lightning-input>
        </div>
      </fieldset>
      <div
        class="slds-form-element slds-m-top_medium"
      >
        <div
          class="slds-form-element__control"
        >
          <lightning-button
            data-submitbtn="true"
          >
            #shadow-root(open)
              <button>
                Submit
              </button>
          </lightning-button>
        </div>
      </div>
    </div>
</community_flashhelp-loginform>
`;
